--- a/css/dont_trust_cable.css
+++ b/css/dont_trust_cable.css
@@ -6381,20 +6381,25 @@ a:hover {
 .jumbotron.developer h2 {
   text-shadow: none !important ;
   color: #fff;
-  font-size: 40px !important;
-  line-height: 44px;
+  font-size: 78px !important;
+  line-height: 84px;
   font-weight: bold  !important;
   font-family: 'Helvetica Neue', Helvetica, sans-serif !important;
 }
 .jumbotron.developer span h2 {
+  font-size: 60px !important;
   opacity: .6;
+}
+.jumbotron.developer .share {
+  padding-bottom: 60px;
 }
 @media only screen and (min-width: 768px ) {
   .jumbotron.developer .row .col-centered {
     max-width: 600px;
   }
   .jumbotron.developer .signup {
-    padding-bottom: 50px;
+    padding-top: 20px;
+    padding-bottom: 30px;
   }
 }
 .jumbotron.developer .signup-thanks {
@@ -6410,7 +6415,27 @@ a:hover {
 }
 .jumbotron.developer a {
   color: #ffffff;
-  text-decoration: underline;
+  display: inline block;
+  padding: 10px 20px;
+  text-transform: uppercase;
+  font-weight: bold;
+  background: #dddee0;
+  margin: 7px;
+  border-radius: 2px;
+  box-shadow: 0 2px 1px rgba(0, 0, 0, 0.3);
+  border: 1px solid rgba(255, 255, 255, 0.2);
+}
+.jumbotron.developer a:hover {
+  box-shadow: none;
+}
+.jumbotron.developer a.facebook {
+  background: #0c62bd;
+}
+.jumbotron.developer a.twitter {
+  background: #53a5f7;
+}
+.jumbotron.developer a.googleplus {
+  color: #DB585A;
 }
 .jumbotron.developer.short {
   padding-bottom: 0px;
