--- a/less/css/dont_trust_cable.less
+++ b/less/css/dont_trust_cable.less
@@ -78,19 +78,21 @@ a {
     h2 {
               text-shadow: none !important ;
               color: #fff;
-              font-size: 40px !important;
-
-              line-height: 44px;
+              font-size: 78px !important;
+              line-height: 84px;
               font-weight: bold  !important;
               font-family: 'Helvetica Neue', Helvetica, sans-serif !important;
             }
     span {
         h2 {
+              font-size: 60px !important;
               opacity: .6;
             }
       
     }
-
+    .share {
+      padding-bottom: 60px; 
+    }
     @media @tablet {
       @padding-top: 0px;
       .row {
@@ -103,7 +105,8 @@ a {
       }
 
       .signup {
-        padding-bottom: 50px;
+        padding-top: 20px;
+        padding-bottom: 30px;
       }
     }
 
@@ -123,7 +126,31 @@ a {
 
     a {
       color: @white;
-      text-decoration: underline;
+      display: inline block;
+      padding: 10px 20px;
+      text-transform: uppercase;
+      font-weight: bold;
+      background: #dddee0;
+      margin: 7px;
+      border-radius: 2px;
+      box-shadow: 0 2px 1px rgba(0, 0, 0, 0.3);
+      border: 1px solid rgba(255,255,255, 0.2);
+    }
+
+    a:hover {
+      box-shadow: none;
+      }
+
+    a.facebook{
+      background: #0c62bd;
+    }
+
+    a.twitter{
+      background: #53a5f7;
+    }
+
+    a.googleplus{
+      color: #DB585A;
     }
 
     &.short {
