--- a/less/css/dont_trust_cable.less
+++ b/less/css/dont_trust_cable.less
@@ -65,7 +65,7 @@ a {
   }
 
   @media @desktop-sm  {
-    padding: 20px 50px 40p;
+    padding: 20px 50px 40p; 
   }
 
   &.developer {
@@ -85,16 +85,36 @@ a {
             }
     span {
         h2 {
-              font-size: 60px !important;
+              font-size: 35px ;
               opacity: .6;
             }
       
+     @media @tablet { 
+
+    span {
+        h2 {
+              font-size: 60px !important;
+            }
+
+      }
+             h2 {
+
+              font-size: 78px !important;
+              line-height: 84px;
+
+            }
+    }
+
     }
     .share {
-      padding-bottom: 60px; 
+      padding-bottom: 0px; 
     }
     @media @tablet {
       @padding-top: 0px;
+      .share {
+      padding-bottom: 60px; 
+    }
+
       .row {
 
 
@@ -126,8 +146,9 @@ a {
 
     a {
       color: @white;
-      display: inline block;
+      display: block;
       padding: 10px 20px;
+      line-height: 50px;
       text-transform: uppercase;
       font-weight: bold;
       background: #dddee0;
@@ -135,6 +156,13 @@ a {
       border-radius: 2px;
       box-shadow: 0 2px 1px rgba(0, 0, 0, 0.3);
       border: 1px solid rgba(255,255,255, 0.2);
+      line-height: 20px;
+    }
+
+    @media @tablet { 
+      a {
+      display: inline-block !important;
+    }
     }
 
     a:hover {
