--- a/css/dont_trust_cable.css
+++ b/css/dont_trust_cable.css
@@ -6352,6 +6352,38 @@ a:hover {
   color: #c54a45;
   text-decoration: none;
 }
+a.share-btn {
+  color: #ffffff;
+  display: block;
+  padding: 10px 20px;
+  line-height: 50px;
+  text-transform: uppercase;
+  font-weight: bold;
+  background: #dddee0;
+  margin: 7px;
+  border-radius: 2px;
+  box-shadow: 0 2px 1px rgba(0, 0, 0, 0.3);
+  border: 1px solid rgba(255, 255, 255, 0.2);
+  line-height: 20px;
+}
+@media only screen and (min-width: 768px ) {
+  a.share-btn {
+    display: inline-block !important;
+  }
+}
+a.share-btn:hover {
+  box-shadow: none;
+  box-shadow: inset 0 0 50px rgba(0, 0, 0, 0.1);
+}
+a.facebook {
+  background: #0c62bd;
+}
+a.twitter {
+  background: #53a5f7;
+}
+a.googleplus {
+  color: #DB585A;
+}
 .jumbotron {
   margin: 0 auto;
   max-width: 950px;
@@ -6424,37 +6456,6 @@ a:hover {
 .jumbotron.developer p {
   max-width: 950px;
   margin: 20px auto;
-}
-.jumbotron.developer a {
-  color: #ffffff;
-  display: block;
-  padding: 10px 20px;
-  line-height: 50px;
-  text-transform: uppercase;
-  font-weight: bold;
-  background: #dddee0;
-  margin: 7px;
-  border-radius: 2px;
-  box-shadow: 0 2px 1px rgba(0, 0, 0, 0.3);
-  border: 1px solid rgba(255, 255, 255, 0.2);
-  line-height: 20px;
-}
-@media only screen and (min-width: 768px ) {
-  .jumbotron.developer a {
-    display: inline-block !important;
-  }
-}
-.jumbotron.developer a:hover {
-  box-shadow: none;
-}
-.jumbotron.developer a.facebook {
-  background: #0c62bd;
-}
-.jumbotron.developer a.twitter {
-  background: #53a5f7;
-}
-.jumbotron.developer a.googleplus {
-  color: #DB585A;
 }
 .jumbotron.developer.short {
   padding-bottom: 0px;
@@ -7146,11 +7147,35 @@ body#dont-trust section.deal .col-md-12 h2 {
   font-family: 'Helvetica Neue', Helvetica, sans-serif;
   color: #424242;
 }
+body#dont-trust section.deal .col-md-12 h3 {
+  font-size: 24px;
+  line-height: 38px;
+  font-weight: 500 !important;
+  font-family: 'Helvetica Neue', Helvetica, sans-serif;
+  color: #424242;
+}
+body#dont-trust section.deal .col-md-12 h3 a {
+  color: #3565ba;
+  font-weight: bold;
+}
 body#dont-trust section.deal .col-md-12 p {
   color: #424242;
 }
+body#dont-trust section.deal .col-md-12 p a {
+  color: #3565ba;
+  font-weight: 500;
+}
 body#dont-trust section.deal .col-md-12 a.btn {
   margin: 20px 0 0 0;
+}
+body#dont-trust section.deal .col-md-12 a.share-btn {
+  box-shadow: none;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  opacity: .9;
+}
+body#dont-trust section.deal .col-md-12 a.share-btn:hover {
+  opacity: 1;
+  box-shadow: inset 0 0 50px rgba(0, 0, 0, 0.2);
 }
 body#dont-trust .sharing-buttons {
   background: none !important;
