--- a/less/css/dont_trust_cable.less
+++ b/less/css/dont_trust_cable.less
@@ -54,6 +54,45 @@ a {
   }
 }
 
+a.share-btn {
+      color: @white;
+      display: block;
+      padding: 10px 20px;
+      line-height: 50px;
+      text-transform: uppercase;
+      font-weight: bold;
+      background: #dddee0;
+      margin: 7px;
+      border-radius: 2px;
+      box-shadow: 0 2px 1px rgba(0, 0, 0, 0.3);
+      border: 1px solid rgba(255,255,255, 0.2);
+      line-height: 20px;
+    }
+
+    @media @tablet { 
+      a.share-btn {
+      display: inline-block !important;
+    }
+    }
+
+    a.share-btn:hover {
+      box-shadow: none;
+      box-shadow: inset 0 0 50px rgba(0,0,0, .1);
+      }
+
+    a.facebook{
+      background: #0c62bd;
+    }
+
+    a.twitter{
+      background: #53a5f7;
+    }
+
+    a.googleplus{
+      color: #DB585A;
+    }
+
+
 .jumbotron {
   margin: 0 auto;
   max-width: 950px;
@@ -144,43 +183,7 @@ a {
       margin: 20px auto;
     }
 
-    a {
-      color: @white;
-      display: block;
-      padding: 10px 20px;
-      line-height: 50px;
-      text-transform: uppercase;
-      font-weight: bold;
-      background: #dddee0;
-      margin: 7px;
-      border-radius: 2px;
-      box-shadow: 0 2px 1px rgba(0, 0, 0, 0.3);
-      border: 1px solid rgba(255,255,255, 0.2);
-      line-height: 20px;
-    }
-
-    @media @tablet { 
-      a {
-      display: inline-block !important;
-    }
-    }
-
-    a:hover {
-      box-shadow: none;
-      }
-
-    a.facebook{
-      background: #0c62bd;
-    }
-
-    a.twitter{
-      background: #53a5f7;
-    }
-
-    a.googleplus{
-      color: #DB585A;
-    }
-
+  
     &.short {
       padding-bottom: 0px;
     }
@@ -951,12 +954,37 @@ body#dont-trust {
                   font-family: 'Helvetica Neue', Helvetica, sans-serif;
                   color: #424242;
                 }
+                h3 {
+                  font-size: 24px;
+                  line-height: 38px;
+                  font-weight: 500 !important;
+                  font-family: 'Helvetica Neue', Helvetica, sans-serif;
+                  color: #424242;
+                  a {
+                   color:#3565ba;
+                   font-weight: bold;
+                  }
+                }
                 p {
                   color: #424242;
+
+                  a {
+                   color:#3565ba;
+                   font-weight: 500;
+                  }
                 }
 
                 a.btn {
                   margin: 20px 0 0 0;
+                }
+                a.share-btn {
+                  box-shadow: none;
+                  border: 1px solid rgba(0,0,0, .2);
+                  opacity: .9;
+                  &:hover {
+                    opacity: 1;
+                    box-shadow: inset 0 0 50px rgba(0,0,0, .2);
+                  }
                 }
               }
           }
