--- a/less/css/dont_trust_cable.less
+++ b/less/css/dont_trust_cable.less
@@ -92,6 +92,12 @@ a.share-btn {
       color: #DB585A;
     }
 
+img {
+   margin: 20px 0;
+   max-width: 100%;
+
+}
+
 
 .jumbotron {
   margin: 0 auto;
@@ -117,32 +123,29 @@ a.share-btn {
     h2 {
               text-shadow: none !important ;
               color: #fff;
-              font-size: 78px !important;
-              line-height: 84px;
+              font-size: 30px !important;
+              line-height: 40px;
               font-weight: bold  !important;
               font-family: 'Helvetica Neue', Helvetica, sans-serif !important;
+
+                @media @tablet { 
+                  font-size: 78px !important;
+                  line-height: 84px;
+                }
             }
     span {
         h2 {
-              font-size: 35px ;
+              font-size: 30px !important;
+                 line-height: 32px;
               opacity: .6;
+
+              @media @tablet { 
+                 font-size: 78px !important;
+                  line-height: 84px;
+                }
             }
       
-     @media @tablet { 
 
-    span {
-        h2 {
-              font-size: 60px !important;
-            }
-
-      }
-             h2 {
-
-              font-size: 78px !important;
-              line-height: 84px;
-
-            }
-    }
 
     }
     .share {
