--- a/less/css/dont_trust_cable.less
+++ b/less/css/dont_trust_cable.less
@@ -703,9 +703,12 @@ body#dont-trust {
 
         section#main.jumbotron {
             
-            padding: 5%  11%;
+            padding: 0 8%;
             display:block;
 
+            @media @tablet {
+              padding: 5%  11%;
+            }
 
           .col-md-8 {
             display:block;
