--- a/css/dont_trust_cable.css
+++ b/css/dont_trust_cable.css
@@ -6925,8 +6925,13 @@ body#dont-trust .container-fluid {
   background-position: center top;
 }
 body#dont-trust .container-fluid section#main.jumbotron {
-  padding: 5%  11%;
+  padding: 0 8%;
   display: block;
+}
+@media only screen and (min-width: 768px ) {
+  body#dont-trust .container-fluid section#main.jumbotron {
+    padding: 5%  11%;
+  }
 }
 body#dont-trust .container-fluid section#main.jumbotron .col-md-8 {
   display: block;
